# Xpdf

./: INSTALL  INSTALL.md  README.md  aconf.h  meson.build
xpdf/: SplashOutputDev.cc  SplashOutputDev.h  TextOutputDev.cc  TextOutputDev.h  pdfindex.cc
